[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "reload"
readme  = "README.rst"
authors = [{name = "Dan Pascu", email = "dan@aethereal.link"}]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: BSD",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
requires-python = ">=3.12"
dynamic = ["version", "description"]
dependencies = ["aioice", "lxml", "pyopenssl"]

[project.optional-dependencies]
test = ["pytest >=6.0", "pytest-cov", "trustme"]
devel = ["reload[test]", "ruff", "mypy@git+https://github.com/python/mypy", "lxml-stubs", "types-pyOpenSSL"]

[tool.flit.sdist]
include = ["docs/", "tests/"]
exclude = ["tests/sandbox/", "tests/__pycache__/"]

[tool.pytest.ini_options]
addopts = "-ra -v"
testpaths = ["tests"]
norecursedirs = ["sandbox"]

[tool.mypy]
enable_incomplete_feature = "NewGenericSyntax"
check_untyped_defs = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
# strict_equality = true

[tool.ruff]
preview = true
line-length = 180
extend-exclude = ["_darcs", ".idea", ".mypy_cache", ".pytest_cache"]

[tool.ruff.format]
docstring-code-format = true
quote-style = "single"

# CPY001 - missing copyright seems buggy (gives false positives)
# EM1XX, TRY003 - messages in raised exceptions (too restrictive)

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D1", "D202", "D203", "D212", "D400", "CPY001", "EM1", "N818", "SIM108", "TD003", "TRY003"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.pylint]
max-args = 7
